--- a/client/src/Locales/ru.json
+++ b/client/src/Locales/ru.json
@@ -36,6 +36,8 @@
     "delete-success": "Пользователь успешно удалён",
     "name": "Имя",
     "hello": "Привет",
-    "created-at": "Дата создания"
+    "created-at": "Дата создания",
+    "Selectall": "Выбрать всех",
+    "Removeall": "Убрать всех"
   }
 }
